Amarok ChangeLog
================
(C) 2002-2013 the Amarok authors.


VERSION 2.8-Beta 1
  FEATURES:
   * The Files browser now has a Refresh button. (BR 213666)
   * The active playlist item is animated with a soft glow effect.
   * Added an audio analyzer visualization applet.
   * Added a function for resetting the GUI layout back to default state. (BR 300753)
   * Pressing enter when searching collections now adds found tracks to the playlist and
     clears the search bar, this is a very convenient way to populate your playlist.
   * Allow to transcode only certain (different format, playability) tracks when
     transferring them to a collection; patch by Anmol Ahuja. (BR 312407)
   * On-Screen-Display fades in/out smoothly.
   * Added support for .asx playlists; patch by Tatjana Gornak. (BR 170207)
   * Add Radio GFM radio streams to Cool Stream Script. (BR 317978)
   * Added options to pause playback on system suspend and to inhibit automatic suspend
     if playing a track (enabled by default); patch by Anmol Ahuja. (BR 259862, 222571)
   * Playlist files are now read asynchronously when possible; patch and great deal of
     refactoring by Tatjana Gornak. (BR 291934)
   * Added support to filter tracks to scrobble to Last.fm by label. Patch by Vedant
     Agarwala. (BR 140198)
   * Added transcoding support for Opus codec if ffmpeg is compiled with support for the
     libopus library, patch by Martin Brodbeck.
   * Added keyboard shortcuts for small 2 s seeks (Ctrl + Left/Right) and long 1 minute
     seeks (Shift + Left/Right) in addition to standard 10 s seeks. Durations are now
     configurable in amarokrc, see Amarok Handbook. Patch by Anmol Ahuja. (BR 177258)
   * Added support for files in Opus codec if Amarok is compiled against recent enough
     TagLib (post 1.8), patch by Martin Brodbeck. (BR 312905)
   * Added Ctrl+H shortcut to randomize playlist, patch by Harsh Gupta. (BR 208061)

  CHANGES:
   * Removed the splash screen.