@@ -200,8 +200,13 @@
         <whatsthis>Mute/Unmute sound.</whatsthis>
         <default>false</default>
     </entry>
-    <entry key="Fadeout" type="Bool">
+    <entry key="FadeoutOnStop" type="Bool">
         <label>Whether to fade out tracks when pressing stop.</label>
+        <whatsthis>Enable/Disable fadeout.</whatsthis>
+        <default>true</default>
+    </entry>
+    <entry key="FadeoutOnPause" type="Bool">
+        <label>Whether to fade out tracks when pressing pause.</label>
         <whatsthis>Enable/Disable fadeout.</whatsthis>
         <default>true</default>
     </entry>
