@@ -33,14 +33,18 @@ PlaybackConfig::PlaybackConfig( QWidget* parent )
     setupUi( this );
 
     connect( findChild<QPushButton*>( "pushButtonPhonon" ), SIGNAL(clicked()), SLOT(configurePhonon()) );
+    connect( kcfg_FadeoutOnStop, SIGNAL(toggled(bool)), SLOT(setFadeoutState()) );
+    connect( kcfg_FadeoutOnPause, SIGNAL(toggled(bool)), SLOT(setFadeoutState()) );
 
     EngineController *engine = EngineController::instance();
     Q_ASSERT( engine );
     if( !engine->supportsFadeout() )
     {
         QString toolTip = i18n( "Current Phonon backend does not support volume fading" );
-        kcfg_Fadeout->setEnabled( false );
-        kcfg_Fadeout->setToolTip( toolTip );
+        kcfg_FadeoutOnStop->setEnabled( false );
+        kcfg_FadeoutOnStop->setToolTip( toolTip );
+        kcfg_FadeoutOnPause->setEnabled( false );
+        kcfg_FadeoutOnPause->setToolTip( toolTip );
     }
 }
 
@@ -84,5 +88,15 @@ PlaybackConfig::configurePhonon() //SLOT
     KCM.addModule( "kcm_phonon" );
     KCM.exec();
 }
+
+void
+PlaybackConfig::setFadeoutState() //SLOT
+{
+    const bool enabled = kcfg_FadeoutOnPause->isChecked() || kcfg_FadeoutOnStop->isChecked();
+
+    fadeoutLengthLabel->setEnabled( enabled );
+    kcfg_FadeoutLength->setEnabled( enabled );
+}
+
 
 #include "PlaybackConfig.moc"
